--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Painel de Acompanhamento — Final (rev)</title>
+  <title>Painel de Acompanhamento — Online</title>
   <style>
     :root{--bg:#0b0f14;--card:#121821;--soft:#1a2230;--text:#e6edf3;--muted:#9fb0c8;--accent:#3aa6ff;--br:16px}
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--text);font:14px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Helvetica,Arial}
-    .wrap{max-width:900px;margin:0 auto;padding:16px}
+    .wrap{max-width:980px;margin:0 auto;padding:16px}
     header{display:flex;align-items:center;justify-content:space-between;margin-bottom:12px;gap:8px;flex-wrap:wrap}
     h1{font-size:18px;margin:0}
     .login{max-width:360px;margin:10vh auto;background:var(--card);padding:24px;border-radius:var(--br);box-shadow:0 10px 30px rgba(0,0,0,.35)}
@@ -20,7 +20,7 @@
     .app{display:none}
     .grid{display:grid;grid-template-columns:1fr;gap:12px}
     @media (min-width:520px){.grid{grid-template-columns:repeat(2,1fr)}}
-    @media (min-width:900px){.grid{grid-template-columns:repeat(3,1fr)}}
+    @media (min-width:980px){.grid{grid-template-columns:repeat(3,1fr)}}
     .card{background:var(--card);padding:16px;border-radius:var(--br)}
     .card .k{font-size:12px;color:var(--muted)}
     .card .v{font-size:20px;font-weight:800;margin-top:4px}
@@ -37,7 +37,8 @@
     th{color:var(--muted);font-weight:600}
     tbody tr:hover{background:#121a28}
     .right{text-align:right}
-    .debug{margin-top:8px;font-size:12px;color:#8fb4ff;white-space:pre-wrap}
+    .debug{margin-top:12px;font-size:12px;color:#8fb4ff;white-space:pre-wrap;background:#0e1420;border:1px solid #24324d;border-radius:12px;padding:10px}
+    .warn{color:#ffd479}
   </style>
 </head>
 <body>
@@ -98,54 +99,268 @@
 
 <script>
 (function(){
+  // ========= CONFIG =========
   const LOGIN_EMAIL='lamounier16@gmail.com';
   const LOGIN_PASS ='helilamounier16';
+
+  // Troque este ID pela sua planilha publicada, se necessário.
+  // Tem que estar em "Arquivo > Publicar na web > CSV" por aba.
   const CSV_BASE='https://docs.google.com/spreadsheets/d/e/2PACX-1vSSTZeX26G70f5Xd9WyqZkLE4kjkL4qUUVdpHGras3NWUqjHvRPEY62NB8IzPGpgZmIKbekFDD7gxfg/pub?output=csv&single=true&sheet=';
   const SHEETS={controle:'Controle',depositos:'Depósitos',rend1:'Rendimentos - Investimento 1',rend2:'Rendimentos - Investimento 2'};
 
-  let cutoff=null, dep=[], r1=[], r2=[], booted=false;
+  const DEBUG=true; // mostrar painel de debug na tela
 
-  function showLogin(){document.getElementById('login').style.display='block';document.getElementById('app').style.display='none';}
-  function showApp(){document.getElementById('login').style.display='none';document.getElementById('app').style.display='block';}
-  function saveAuth(){try{localStorage.setItem('pa_auth','1')}catch(e){}}
-  function clearAuth(){try{localStorage.removeItem('pa_auth')}catch(e){}}
-  function hasAuth(){try{return localStorage.getItem('pa_auth')==='1'}catch(e){return false}}
+  // ========= STATE =========
+  let cutoff=null, dep=[], r1=[], r2=[], booted=false, debugLog=[];
+
+  const $=s=>document.querySelector(s);
+  const $$=s=>document.querySelectorAll(s);
+  const log=(...a)=>{ debugLog.push(a.map(String).join(' ')); console.log('[DBG]', ...a); };
+
+  // ========= LOGIN =========
+  function showLogin(){ $('#login').style.display='block'; $('#app').style.display='none'; }
+  function showApp(){ $('#login').style.display='none'; $('#app').style.display='block'; }
+  function saveAuth(){ try{ localStorage.setItem('pa_auth','1'); }catch(e){} }
+  function clearAuth(){ try{ localStorage.removeItem('pa_auth'); }catch(e){} }
+  function hasAuth(){ try{ return localStorage.getItem('pa_auth')==='1'; } catch(e){ return false; } }
 
   function tryLogin(){
     console.log('[tryLogin] fired');
-    const e=(document.getElementById('email').value||'').trim().toLowerCase();
-    const p=(document.getElementById('pass').value||'').trim();
-    if(e===LOGIN_EMAIL.toLowerCase() && p===LOGIN_PASS){
-      saveAuth();document.getElementById('err').textContent='';showApp();ensureBoot();
-    } else {
-      document.getElementById('err').textContent='Credenciais inválidas';
-    }
+    const e=($('#email').value||'').trim().toLowerCase();
+    const p=($('#pass').value||'').trim();
+    if(e===LOGIN_EMAIL.toLowerCase() && p===LOGIN_PASS){ saveAuth(); $('#err').textContent=''; showApp(); ensureBoot(); }
+    else { $('#err').textContent='Credenciais inválidas'; }
   }
 
-  window.addEventListener('DOMContentLoaded',()=>{
+  window.addEventListener('DOMContentLoaded', ()=>{
     console.log('[DOMContentLoaded] ready');
-    if(hasAuth()){showApp();ensureBoot();}else{showLogin();}
-    const go=document.getElementById('go');
-    const logout=document.getElementById('logout');
-    if(go) go.addEventListener('click',tryLogin);
-    if(logout) logout.addEventListener('click',()=>{clearAuth();location.reload();});
-    const onEnter=(ev)=>{if(ev.key==='Enter'){tryLogin();}};
-    document.getElementById('email').addEventListener('keydown',onEnter);
-    document.getElementById('pass').addEventListener('keydown',onEnter);
+    if(hasAuth()){ showApp(); ensureBoot(); } else { showLogin(); }
+    const go=$('#go'), logout=$('#logout');
+    if(go) go.addEventListener('click', tryLogin);
+    if(logout) logout.addEventListener('click', ()=>{ clearAuth(); location.reload(); });
+    const onEnter=(ev)=>{ if(ev.key==='Enter') tryLogin(); };
+    $('#email')?.addEventListener('keydown', onEnter);
+    $('#pass')?.addEventListener('keydown', onEnter);
   });
 
   function ensureBoot(){ if(!booted){ booted=true; boot(); } }
 
-  async function fetchSheet(sheet){
-    const url=CSV_BASE+encodeURIComponent(sheet)+'&ts='+Date.now();
-    const res=await fetch(url);
-    const txt=await res.text();
-    return txt;
+  // ========= CSV FETCH / PARSE =========
+  function parseCSV(text){
+    const lines=text.replace(/\\r/g,'').split(/\\n+/);
+    const cleaned = lines.filter((ln,i)=> !(i===lines.length-1 && ln.trim()===''));
+    const rows=cleaned.map(line=>{
+      const out=[]; let cur=''; let q=false;
+      for(let i=0;i<line.length;i++){
+        const ch=line[i];
+        if(ch==='\"'){ if(q && line[i+1]==='\"'){ cur+='\"'; i++; } else { q=!q; } }
+        else if(ch===',' && !q){ out.push(cur); cur=''; }
+        else { cur+=ch; }
+      }
+      out.push(cur);
+      return out;
+    });
+    const cols=rows.shift()||[]; return {cols,rows};
   }
 
+  async function fetchSheet(sheet){
+    const url=CSV_BASE+encodeURIComponent(sheet)+'&ts='+Date.now();
+    log('fetch', url);
+    try{
+      const res=await fetch(url, {cache:'no-store'});
+      log('status', sheet, res.status);
+      if(!res.ok){ throw new Error('HTTP '+res.status); }
+      const txt=await res.text();
+      return parseCSV(txt);
+    }catch(err){
+      log('fetch ERROR', sheet, err.message);
+      throw err;
+    }
+  }
+
+  // ========= HELPERS =========
+  const norm=s=>(s==null?'':String(s)).normalize('NFD').replace(/[\\u0300-\\u036f]/g,'').toLowerCase().trim().replace(/\\s+/g,' ');
+  function findIndex(cols,cands){
+    const C=cols.map(norm);
+    for(const c of cands){ const i=C.indexOf(norm(c)); if(i>=0) return i; }
+    return -1;
+  }
+  function toDate(s){
+    if(s==null) return null;
+    if(typeof s==='number' || (/^\\d+(\\.\\d+)?$/.test(String(s)) && String(s).length<=7)){
+      const days=parseFloat(s);
+      if(!isNaN(days)){
+        const epoch=new Date(Date.UTC(1899,11,30));
+        return new Date(epoch.getTime()+days*86400000);
+      }
+    }
+    let t=String(s).replace(/\\u00A0/g,' ').trim().split(' ')[0];
+    if(/^\\d{4}-\\d{2}-\\d{2}$/.test(t)){ const [y,m,d]=t.split('-').map(Number); return new Date(y,m-1,d); }
+    const m=t.match(/^(\\d{1,2})[\\/-](\\d{1,2})[\\/-](\\d{2,4})$/);
+    if(m){
+      let a=+m[1], b=+m[2], y=(+m[3]<100?2000+(+m[3]):+m[3]), dd, mm;
+      if(a>12 && b<=12){ dd=a; mm=b-1; }
+      else if(b>12 && a<=12){ dd=b; mm=a-1; }
+      else { dd=a; mm=b-1; }
+      const d=new Date(y,mm,dd);
+      if(!isNaN(d)) return d;
+    }
+    const d=new Date(t);
+    return isNaN(d)?null:d;
+  }
+  function fmtBRL(n){
+    if(n==null||n==='') return '—';
+    const num=parseFloat(String(n).replace(/[^0-9\\-.,]/g,'').replace(/\\./g,'').replace(',', '.'));
+    if(isNaN(num)) return String(n);
+    return num.toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
+  }
+  function fmtDate(d){
+    if(!(d instanceof Date)||isNaN(d)) return '—';
+    const dd=String(d.getDate()).padStart(2,'0'), mm=String(d.getMonth()+1).padStart(2,'0'), yy=d.getFullYear();
+    return `${dd}/${mm}/${yy}`;
+  }
+  function escapeHTML(s){ return String(s).replace(/[&<>\"']/g, m=>({\"&\":\"&amp;\",\"<\":\"&lt;\",\">\":\"&gt;\",\"\\\"\":\"&quot;\",\"'\":\"&#39;\"}[m])); }
+
+  // ========= LOADERS =========
+  async function loadControle(){
+    const g=await fetchSheet(SHEETS.controle);
+    if(!g.rows.length){ log('controle vazio'); return; }
+    const c=g.cols, r=g.rows[0];
+    const ix={
+      data:  findIndex(c, ['data','referencia','atualizacao','atualização']),
+      aplic1:findIndex(c, ['aplicação 1','aplicacao 1','saldo aplicacao 1','saldo aplicação 1','aplicacao cdi','aplicação cdi']),
+      rend1: findIndex(c, ['rendimento 1','rend aplicacao 1','rend aplicação 1','rendimento aplicacao','rendimento aplicação']),
+      aplic2:findIndex(c, ['aplicação 2','aplicacao 2','saldo aplicacao 2','saldo aplicação 2','conta cdi','saldo conta cdi']),
+      rend2: findIndex(c, ['rendimento 2','rend conta 2','rendimento conta','rend conta cdi']),
+      total: findIndex(c, ['total','valor total']),
+      rtotal:findIndex(c, ['rendimento total','rend total'])
+    };
+    const dA2=toDate(r[ix.data]);
+    cutoff=dA2 || new Date();
+    $('#total').textContent  = fmtBRL(r[ix.total]);
+    $('#rtotal').textContent = fmtBRL(r[ix.rtotal]);
+    $('#saldo1').textContent = fmtBRL(r[ix.aplic1]);
+    $('#rend1').textContent  = fmtBRL(r[ix.rend1]);
+    $('#saldo2').textContent = fmtBRL(r[ix.aplic2]);
+    $('#rend2').textContent  = fmtBRL(r[ix.rend2]);
+    $('#updated').textContent='Atualizado em '+fmtDate(cutoff);
+    log('controle OK, cutoff=', fmtDate(cutoff));
+  }
+
+  function mapRows(g, names){
+    if(!g.rows.length) return [];
+    const c=g.cols;
+    const ix={
+      data: findIndex(c, ['data','dt','competencia','competência']),
+      valor: findIndex(c, names.valorCandidates),
+      detalhe: findIndex(c, ['detalhe','detalhes','descricao','descrição','observacao','observação','obs'])
+    };
+    if(ix.valor<0) ix.valor = findIndex(c, ['valor','valor do rendimento','acrescimo','acréscimo','entrada']);
+    const out = g.rows.map(r=>{
+      const d=toDate(r[ix.data]);
+      const v=ix.valor>=0 ? r[ix.valor] : '';
+      const det= ix.detalhe>=0 ? (r[ix.detalhe]||'') : '';
+      return {data:d, valor:v, det:det};
+    });
+    return out.filter(x=>x.data && (!cutoff || x.data<=cutoff));
+  }
+
+  async function loadDepositos(){
+    const g=await fetchSheet(SHEETS.depositos);
+    dep = mapRows(g, {sheet:'depositos', valorCandidates:['depósito','deposito','valor','entrada','acréscimo','acrescimo']});
+    log('dep carregados:', dep.length);
+  }
+  async function loadRend1(){
+    const g=await fetchSheet(SHEETS.rend1);
+    r1 = mapRows(g, {sheet:'rend1', valorCandidates:['rendimento','valor do rendimento','valor']});
+    log('r1 carregados:', r1.length);
+  }
+  async function loadRend2(){
+    const g=await fetchSheet(SHEETS.rend2);
+    r2 = mapRows(g, {sheet:'rend2', valorCandidates:['rendimento','valor do rendimento','valor']});
+    log('r2 carregados:', r2.length);
+  }
+
+  // ========= RENDER =========
+  function tableHTML(headers, rows){
+    if(!rows.length) return '<div class="card"><span class="muted">Sem lançamentos no período.</span></div>';
+    const thead='<thead><tr>'+headers.map(h=>'<th>'+h+'</th>').join('')+'</tr></thead>';
+    const tbody='<tbody>'+rows.map(r=>'<tr>'+r.map((c,i)=>'<td class="'+(i===1?'right':'')+'">'+c+'</td>').join('')+'</tr>').join('')+'</tbody>';
+    return '<div class="card"><table>'+thead+tbody+'</table></div>';
+  }
+
+  function renderTables(){
+    const range=$('.pill.active').dataset.range;
+    const view=$('#view').value;
+    const qraw=($('#q').value||'');
+    const q=norm(qraw);
+
+    function inRange(d){
+      if(!d||!cutoff) return false;
+      if(range==='all') return d<=cutoff;
+      const days=(range==='30'?30:90);
+      const from=new Date(cutoff); from.setDate(from.getDate()-days);
+      return d>=from && d<=cutoff;
+    }
+    function search(arr){
+      if(!q) return arr;
+      return arr.filter(x=> norm(x.det||'').includes(q) );
+    }
+
+    const depRows = search(dep).filter(x=>inRange(x.data)).map(x=>[fmtDate(x.data), fmtBRL(x.valor), escapeHTML(x.det)]);
+    const r1Rows  = search(r1 ).filter(x=>inRange(x.data)).map(x=>[fmtDate(x.data), fmtBRL(x.valor), escapeHTML(x.det)]);
+    const r2Rows  = search(r2 ).filter(x=>inRange(x.data)).map(x=>[fmtDate(x.data), fmtBRL(x.valor), escapeHTML(x.det)]);
+
+    $('#t-depositos').style.display = (view==='depositos')?'block':'none';
+    $('#t-rend1').style.display     = (view==='rend1')?'block':'none';
+    $('#t-rend2').style.display     = (view==='rend2')?'block':'none';
+
+    $('#t-depositos').innerHTML = tableHTML(['Data','Valor','Detalhe'], depRows);
+    $('#t-rend1').innerHTML     = tableHTML(['Data','Rendimento','Detalhe'], r1Rows);
+    $('#t-rend2').innerHTML     = tableHTML(['Data','Rendimento','Detalhe'], r2Rows);
+
+    if(DEBUG){
+      $('#dbg').style.display='block';
+      $('#dbg').innerHTML = [
+        '<b>Debug</b>',
+        'cutoff: '+fmtDate(cutoff),
+        'dep total: '+dep.length,
+        'r1 total: '+r1.length,
+        'r2 total: '+r2.length,
+        'view='+view+', range='+range+', q="'+qraw+'"'
+      ].join('\\n');
+    }
+  }
+
+  // ========= Interações =========
+  $$('.pill').forEach(p=> p.addEventListener('click',()=>{
+    $$('.pill').forEach(x=>x.classList.remove('active'));
+    p.classList.add('active'); renderTables();
+  }));
+  $('#q').addEventListener('input',renderTables);
+  $('#view').addEventListener('change',renderTables);
+  $('#refresh').addEventListener('click',()=>boot(true));
+
+  // ========= Boot =========
   async function boot(force){
-    console.log('[boot] loading data...');
-    // aqui você chama loadControle, loadDepositos etc.
+    try{
+      debugLog=[];
+      await loadControle();
+      await Promise.all([loadDepositos(),loadRend1(),loadRend2()]);
+      if(!force){
+        $('#view').value='depositos';
+        $$('.pill').forEach(x=>x.classList.remove('active'));
+        $('.pill[data-range="all"]').classList.add('active');
+        $('#t-depositos').style.display='block';
+        $('#t-rend1').style.display='none';
+        $('#t-rend2').style.display='none';
+      }
+      renderTables();
+    }catch(err){
+      $('#dbg').style.display='block';
+      $('#dbg').innerHTML = '<span class="warn">Falha ao carregar dados: '+escapeHTML(err.message)+'</span>\\n'+debugLog.join('\\n');
+      console.error(err);
+    }
   }
 })();
 </script>
